tests/reference/asr-parameter1-1a7ed3b.stderr
semantic error: Attribute declaration not supported
 --> tests/parameter1.f90:3:1
  |
3 | parameter (zero=0.0d0,p66=0.66d0,two=2.0d0,three=3.0d0)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
